# funda-app

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-develop.yml  deploy-main.yml  require-develop-for-main.yml
agents/: __init__.py
docs/: architecture.md  github-actions-gcp-setup.md  member-webhook-field-sourcing.md  member-webhook-template-standards.md  member-webhooks-v1.md  member-webhooks-v2-asks.md  member-webhooks-v2.md
funda_app/: __init__.py  app_settings.py  loggy.py  main.py  settings.py
funda_app/agents/: __init__.py  models.py  prompt.py  tools.py
funda_app/api/: __init__.py  health.py  router.py  webhooks.py
funda_app/core/: __init__.py  phone.py  text.py
funda_app/schemas/: __init__.py  admin_notification.py  crm.py  customers.py  enrichment.py  idempotency.py  webhooks.py  whatsapp.py
funda_app/services/: __init__.py  attio.py  attio_schema.py  customers.py  idempotency.py  keyai_questions.py  keyai_webhooks.py  member_enrichment.py  whatsapp.py  whatsapp_templates.py
funda_app/utils/: __init__.py  http.py  (+2 more)
make/: cloud.mk  local.mk  shared.mk
scripts/: apply_attio_schema.py  check_attio_schema.py  export_attio_schema.py
tests/: conftest.py  test_admin_notification_functional.py  test_agents_models.py  test_app_settings.py  test_attio.py  test_attio_schema.py  test_core_text.py  test_customers.py  test_health.py  test_http.py  test_keyai_questions.py  test_member_enrichment.py  test_webhooks.py  test_webhooks_functional.py  test_whatsapp.py  test_whatsapp_functional.py
(+15 files in other folders)
